k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - amazontechspace.com
        - www.amazontechspace.com
      secretName: amazontechspace-tls
  rules:
    - host: amazontechspace.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/posts
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 3002
          - path: /api/comments
            pathType: Prefix
            backend:
              service:
                name: comment-service
                port:
                  number: 3003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: www.amazontechspace.com
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/posts
            pathType: Prefix
            backend:
              service:
                name: post-service
                port:
                  number: 3002
          - path: /api/comments
            pathType: Prefix
            backend:
              service:
                name: comment-service
                port:
                  number: 3003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
